@@ -5,7 +5,6 @@ plugins {
 
 val lombokVersion: String by project
 val junitVersion: String by project
-val lwjglVersion: String by project
 
 sourceSets.create("example") {
     compileClasspath += sourceSets.main.get().output
@@ -23,19 +22,6 @@ dependencies {
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     "exampleCompileOnly"("org.projectlombok:lombok:$lombokVersion")
     "exampleAnnotationProcessor"("org.projectlombok:lombok:$lombokVersion")
-    "exampleImplementation"(platform("org.lwjgl:lwjgl-bom:$lwjglVersion"))
-    "exampleImplementation"("org.lwjgl:lwjgl")
-    "exampleImplementation"("org.lwjgl:lwjgl-glfw")
-    "exampleRuntimeOnly"("org.lwjgl:lwjgl::natives-macos-arm64")
-    "exampleRuntimeOnly"("org.lwjgl:lwjgl-glfw::natives-macos-arm64")
-    "exampleRuntimeOnly"("org.lwjgl:lwjgl::natives-macos")
-    "exampleRuntimeOnly"("org.lwjgl:lwjgl-glfw::natives-macos")
-}
-
-tasks.register<JavaExec>("runMesh") {
-    classpath = sourceSets["example"].runtimeClasspath
-    mainClass = "dev.dov.metalj.example.Mesh"
-    jvmArgs("--enable-native-access=ALL-UNNAMED", "-XstartOnFirstThread")
 }
 
 java {
